--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
 *
+
+body,html{
+    height: 100%;
+    margin: 0%;
+}
+
+p{font-size: 30px;}
+
+.bg{
+    background-image: url("");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+
 .counter {
     min-width: 300px;
     background: #111;
