--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body,html{
 p{font-size: 30px;}
 
 .bg{
-    background-image: url("");
+    background-image: url("./Images/anothercrig.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
