--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body,html{
 p{font-size: 30px;}
 
 .bg{
-    background-image: url("../Images/anothercrig.png");
+    background-image: url("/Images/anothercrig.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
