--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *
 .counter {
     min-width: 300px;
-    background: #111;
+    background: #103;
     height: 300px;
     display: flex;
     align-items: center;
@@ -9,6 +9,6 @@
     flex-direction: column;
     color: white;
     padding: 10px;
-    box-shadow: 5px 5px 50px black
+    box-shadow: 5px 5px 50px red
 }
 p{font-size: 30px;}
