--- a/style.css
+++ b/style.css
@@ -1,14 +1,1 @@
-*
-.counter {
-    min-width: 300px;
-    background: #103;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: white;
-    padding: 10px;
-    box-shadow: 5px 5px 50px red
-}
-p{font-size: 30px;}
+nothing
