--- a/comic/style.css
+++ b/comic/style.css
@@ -4,4 +4,7 @@ div {
 
 body {
   background-image: url('cheap.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
 }
