--- a/comic/style.css
+++ b/comic/style.css
@@ -3,7 +3,7 @@ div {
     }
 
 body {
-  background-image: url('cheap.png');
+  background-image: url('can.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
