--- a/collections/style.css
+++ b/collections/style.css
@@ -1,4 +1,4 @@
-{
+* {
   box-sizing: border-box;
 }
 
@@ -8,6 +8,7 @@
   padding: 5px;
 }
 
+/* Clearfix (clear floats) */
 .row::after {
   content: "";
   clear: both;
