--- a/collections/style.css
+++ b/collections/style.css
@@ -1,16 +1,16 @@
-* {
-  box-sizing: border-box;
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
 }
 
+/* Create two equal columns that sits next to each other */
 .column {
-  float: left;
-  width: 100%;
-  padding: 5px;
+  flex: 50%;
+  padding: 0 4px;
 }
 
-/* Clearfix (clear floats) */
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
 }
