--- a/collections/style.css
+++ b/collections/style.css
@@ -1,51 +1,46 @@
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
+*{
+ margin: 0;
+ padding: 0;
+ box-sizing: border-box;
+ font-family: 'Poppins', sans-serif;
 }
 
-html,body {
-	background: black;
-	padding: 10px;
+.container{
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ margin: 40px 20px 0 20px;
 }
 
-img {
-	max-width: 100%;
-	height: auto;
-	vertical-align: middle;
-	display: inline-block;
+.container .heading{
+ width: 50%;
+ padding-bottom: 50px;
+
+}
+.container .heading h3{
+ font-size: 3em;
+ font-weight: bolder;
+ padding-bottom: 8px;
+ border-bottom: 4px solid #fff;
 }
 
-.grid-wrapper > div {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.container .box{
+ display: flex;
+ flex-direction: row;
+ justify-content: space-between;
+ align-items: center;
 }
 
-.grid-wrapper > div > img {
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-	border-radius: 5px;
+.container .box .dream{
+ display: flex;
+ flex-direction: column;
+ width: 32.5%;
 }
 
-.grid-wrapper {
-	display: grid;
-	grid-gap: 10px;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-	grid-auto-rows: 200px;
-	grid-auto-flow: dense;
-}
-
-.grid-wrapper .wide {
-	grid-column: span 2;
-}
-
-.grid-wrapper .tall {
-	grid-row: span 2;
-}
-
-.grid-wrapper .big {
-	grid-column: span 2;
-	grid-row: span 2;
+.container .box .dream img{
+ width: 100%;
+ padding-bottom: 15px;
+ border-radius: 5px;
 }
