--- a/style.css
+++ b/style.css
@@ -1,14 +1,23 @@
-a:link { 
-  text-decoration: none; 
-} 
-a:visited { 
-  text-decoration: none; 
-  color: black;
-} 
-a:hover { 
-  text-decoration: none; 
+a:link {
+  color: green;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: pink;
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
   color: red;
-} 
-a:active { 
-  text-decoration: none; 
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+a:active {
+  color: yellow;
+  background-color: transparent;
+  text-decoration: underline;
 }
