--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 a:link {
-  color: green;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
 
 a:visited {
-  color: pink;
+  color: black;
   background-color: transparent;
   text-decoration: none;
 }
@@ -17,7 +17,7 @@ a:hover {
 }
 
 a:active {
-  color: yellow;
+  color: red;
   background-color: transparent;
   text-decoration: underline;
 }
