--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ a:visited {
 
 a:hover {
   color: red;
-  background-color: transparent;
+  background-color: black;
   text-decoration: none;
 }
 
