--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ a:link {
   background-color: transparent;
   text-decoration: none;
   font-size: 20px
+  font-family: "Courier New", Courier,
 }
 
 a:visited {
@@ -10,6 +11,7 @@ a:visited {
   background-color: transparent;
   text-decoration: none;
   font-size: 20px
+  font-family: "Courier New", Courier,
 }
 
 a:hover {
@@ -17,6 +19,7 @@ a:hover {
   background-color: transparent;
   text-decoration: none;
   font-size: 20px
+  font-family: "Courier New", Courier,
 }
 
 a:active {
@@ -24,4 +27,5 @@ a:active {
   background-color: transparent;
   text-decoration: none;
   font-size: 20px
+  font-family: "Courier New", Courier,
 }
