--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@ a:link {
   color: black;
   background-color: transparent;
   text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 777;
   font-size: 20px
 }
 
@@ -9,6 +11,8 @@ a:visited {
   color: black;
   background-color: transparent;
   text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 777;
   font-size: 20px
 }
 
@@ -16,12 +20,18 @@ a:hover {
   color: red;
   background-color: transparent;
   text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 777;
   font-size: 20px
+
 }
 
 a:active {
   color: red;
   background-color: transparent;
   text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 777;
   font-size: 20px
+  
 }
