--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 a:link {
-  color: black;
+  color: white;
   background-color: transparent;
   text-decoration: none;
   font-family: Arial, Helvetica, sans-serif;
@@ -12,7 +12,7 @@ a:link {
 }
 
 a:visited {
-  color: black;
+  color: white;
   background-color: transparent;
   text-decoration: none;
   font-family: Arial, Helvetica, sans-serif;
