--- a/style.css
+++ b/style.css
@@ -40,6 +40,12 @@ a:active {
   
 }
 
-.linkcontainer div {
-  margin-bottom: 5px; /* make the links not touch eachother skull */
+.column-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex: 1 1 200px; /* Adjust the width of each column as needed */
+  margin-right: 20px; /* Adjust the spacing between columns as needed */
 }
