--- a/style.css
+++ b/style.css
@@ -48,4 +48,5 @@ a:active {
 .column {
   flex: 1 1 200px; /* Adjust the width of each column as needed */
   margin-right: 100px; /* Adjust the spacing between columns as needed */
+  margin-bottom: 10px; /* Adjust the spacing between links as needed */
 }
