--- a/style.css
+++ b/style.css
@@ -48,5 +48,6 @@ a:active {
 .column {
   flex: 1 1 200px; /* Adjust the width of each column as needed */
   margin-right: 100px; /* Adjust the spacing between columns as needed */
+  display: block;
   margin-bottom: 10px; /* Adjust the spacing between links as needed */
 }
