--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ a:active {
   float: left;
   width: 200px; /* Adjust the width of each column as needed */
   margin-right: 20px; /* Adjust the spacing between columns as needed */
+  margin-bottom: 5px;
 }
 
 .clear {
