--- a/style.css
+++ b/style.css
@@ -42,8 +42,8 @@ a:active {
 
 .column {
   float: left;
-  width: 200px; /* Adjust the width of each column as needed */
-  margin-right: 20px; /* Adjust the spacing between columns as needed */
+  width: 200px; /* width of the columns */
+  margin-right: 20px; /* space between each column */
 }
 
 .clear {
